nicknamer/server/lib/tests/snapshots/names_endpoints_tests__api__v1__can_filter_names_by_different_server_id.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 2
  names:
    - discord_id: 555666777
      id: 3
      name: Charlie
      server_id: server2
    - discord_id: 444333222
      id: 4
      name: David
      server_id: server2
test_name: api_v1_names_filtered_server2
