nicknamer/server/lib/tests/snapshots/names_endpoints_tests__api__v1__can_get_empty_names_as_json_when_no_names_exist.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 0
  names: []
test_name: api_v1_names_empty
