nicknamer/server/lib/tests/snapshots/names_endpoints_tests__api__v1__can_return_all_names_when_no_server_filter.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 4
  names:
    - discord_id: 123456789
      id: 1
      name: Alice
      server_id: server1
    - discord_id: 987654321
      id: 2
      name: Bob
      server_id: server1
    - discord_id: 555666777
      id: 3
      name: Charlie
      server_id: server2
    - discord_id: 444333222
      id: 4
      name: David
      server_id: server2
test_name: api_v1_names_all_servers
